compiler/src/test/resources/golden/errors/type_mismatch.err
error: function `f` declares return type Int but its body is String
  --> type_mismatch.dawn:1:17
  |
1 | fn f() -> Int = "not an int"
  |                 ^^^^^^^^^^^^
